--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    This is the start of a wonderful adventure
+    This is the start of a wonderful adventure 🌈
     <script type="module" src="/main.js"></script>
   </body>
 </html>
